--- a/Labs/Week07_Correlation_Lab.Rmd
+++ b/Labs/Week07_Correlation_Lab.Rmd
@@ -32,9 +32,15 @@ At the end of this lab, you will be able to:
 
 1. Identify hypotheses which may be tested using correlations
 2. Use SPSS to compute a composite score
-3. Use SPSS to run a correlation
-3. Properly interpret and report a correlation
-4. Use the ggplot GUI to produce scatterplots, boxplots, and dot and error-bar plots
+3. Use SPSS to run a Pearson correlation
+4. Properly interpret and report a Pearson correlation
+5. Use the ggplot GUI to produce scatterplots, boxplots, and dot and error-bar plots
+
+If you complete the bonus material, you'll also be able to:
+
+1. Use SPSS to run a Spearman correlation
+2. Properly interpret and report a Spearman correlation
+3. Produce an APA-style correlation matrix table
 
 
 ### This Week's Study
@@ -59,7 +65,7 @@ datInfo <- data.frame(VariableName = colnames(dat),
                                     'Self-Enhancment Score 2; values may range between 0 - 6',
                                     'Self-Enhancment Score 3; values may range between 0 - 6',
                                     'Self-Enhancment Score 4; values may range between 0 - 6',
-                                    'Average Antisocial Behaviour Score; values may range from 1-5',
+                                    'Total Antisocial Behaviour Score; values may range from 5-25',
                                     'Self-Enhancement values as categories; Levels: High; Low',
                                     'Self-reported feelings of parental pressure; Levels: High; Low'))
 
@@ -84,9 +90,8 @@ quiz(caption = '',
               answer('Is there a difference in ticket sales between movie theatres with recliners and those without?'),
               answer('Is there an association between season (Spring, Summer, Autumn, Winter) and the number of cyclists on the path through the Meadows?'),
               answer('Are scores on the Beck Depression Inventory associated with weekly physical activity (in hours)?', correct = T),
-              answer('Can average sleep (hours per week) predict response time (in milliseconds)?'),
               random_answer_order = T,
-              message = "Pearson's correlation is used to test for an association between two continuous variables. It doesn't test prediction or for group differences, and it should not be used with categorical data."))
+              message = "Pearson's correlation is used to test for an association between two continuous variables. It doesn't for group differences, and it should not be used with categorical data."))
 ```
 
 ### Your Tasks
@@ -155,24 +160,28 @@ Additionally, you'll need to compute descriptive data. You'll do this for both y
 
 + [ ] $\ $ Check that all variables are set as the correct measurement type. 
 
++ [ ] $\ $ Compute a composite score, `SelfEnhancement`, by summing the following columns: `SE1`, `SE2`, `SE3`, and `SE4`
+
 + [ ] $\ $ Check the descriptive statistics of your data
 
-+ [ ] $\ $ Compute a composite score, `SelfEnhancement`, by summing the following columns: `SE1`, `SE2`, `SE3`, and `SE4`
+
+
 
 ```{r cyr, echo = FALSE}
 quiz(caption = 'Check Your Results',
-     question_numeric("What is the mean score on SE1? Please round your answer to two decimal places.",
-                      answer(3.17, correct = T),
-                      message = "The mean SE1 score in your sample is 3.17."),
-     question_numeric('What is the maximum value for AntisocialBehaviour? Please round your answer to two decimal places.',
-                      answer(488.00, correct = T),
-                      message = "The maximum Antisocial Behaviour score is 488, which is well outside the expected limits of 1-5. As a score of 488 is not possible, it is an error. It will need to be deleted so that it is excluded from further analysis."))
+     question_numeric('What is the maximum value for AntisocialBehaviour?',
+                      answer(190, correct = T),
+                      message = "The maximum Antisocial Behaviour score is 190, which is well outside the expected limits of 5-25. As a score of 190 is not possible, it is an error. It will need to be deleted so that it is excluded from further analysis."),
+     question_numeric("What is the mean score on SelfEnhancement? Please round your answer to two decimal places.",
+                      answer(12.41, correct = T),
+                      answer(12.42, correct = T),
+                      message = "The mean SelfEnhancement score in your sample is currently 12.42. If you remove the participant with the invalid score for Antisocial Behaviour, the mean SelfEnhancement score will drop slightly to 12.41."))
 ```
 
 <div class="container">
 <details><summary><span style = "font-weight: bold; font-size: 16pt"> Click here for a hint </span></summary>
 
-For continuous variables, the descriptive statistics you'll want to check are mean and standard deviation. It's also useful to check the minimum and maximum so you can easily identify values outside of your expected range. For categorical variables, you'll check the frequency of participants in each group. It may also be useful to check the mode.
+As `SelfEnhancement` is a continuous variable, the descriptive statistics you'll want to check are mean and standard deviation. It's also useful to check the minimum and maximum so you can easily identify values outside of your expected range. For categorical variables, you'll check the frequency of participants in each group. It may also be useful to check the mode.
 
 To compute the self-enhancement composite score, you'll need to navigate to *Transform > Compute Variable*
 
@@ -194,11 +203,11 @@ To check that your variables are labeled as the correct scale of measurement, lo
 
 * `Gender` - Nominal
 
-* `SE1` - Scale
+* `SE1` - Ordinal
 
-* `SE2` - Scale
+* `SE2` - Ordinal
 
-* `SE3` - Scale
+* `SE3` - Ordinal
 
 * `AntisocialBehaviour` - Scale
 
@@ -206,25 +215,7 @@ To check that your variables are labeled as the correct scale of measurement, lo
 
 * `ParentalPressure` - Nominal
 
-In this instance, SPSS assigned the proper measures by default (with the exception of ID, which won't be used as part of any analysis, so you can ignore it if you'd like). No changes are required.
-
-<br>
-<span style = "font-weight: bold; font-size: 14pt"> Check Descriptive Statistics </span>
-
-**Categorical Variables:** Your categorical variables are `Gender`, `SEcategory`, and `ParentalPressure`. Click *Analyze>Descriptive Statistics>Frequencies*, then add these variables to the 'Variable(s)' box. Make sure 'Display frequency tables' is checked, then click 'OK'. You should see the following output:
-
-```{r, echo = F, fig.align= 'center', out.width = '50%'}
-knitr::include_graphics('https://mtruelovehill.github.io/PRM/Labs/images/week7_freqTables.png')
-```
-
-
-**Continuous Variables:** Your continuous variables are `SE1`, `SE2`, `SE3`, `SE4` and `AntisocialBehaviour`. Click *Analyze>Descriptive Statistics>Frequencies*, then add these variables to the 'Variable(s)' box. Make sure 'Display frequency tables' is not ticked, then click 'Statistics'. Tick 'Mean', 'Std. Deviation', 'Minimum', and 'Maximum'. Click 'Continue', then 'OK'. You should see the following output:
-
-```{r, echo = F, fig.align= 'center', out.width = '40%'}
-knitr::include_graphics('https://mtruelovehill.github.io/PRM/Labs/images/week7_descStats.png')
-```
-
-Note that the maximum value for `AntisocialBehaviour` is 488, which is not a valid score. This is an error, so you'll need to remove it from your data so that it is not included in further analysis. To do this, find the value in your dataset under 'Data View' and delete it.
+The newly computed variable, `SelfEnhancement`, should be set as a Scale variable.
 
 <br>
 <span style = "font-weight: bold; font-size: 14pt"> Compute Composite Score </span>
@@ -237,41 +228,53 @@ knitr::include_graphics('https://mtruelovehill.github.io/PRM/Labs/images/week7_c
 
 Click 'OK'. A new column labeled `SelfEnhancement` should appear that contains the sum of the 4 SE columns.
 
+<br>
+<span style = "font-weight: bold; font-size: 14pt"> Check Descriptive Statistics </span>
+
+**Categorical Variables:** Your categorical variables are `Gender`, `SEcategory`, `ParentalPressure`, `SE1`, `SE2`, `SE3` and `SE4`. Click *Analyze>Descriptive Statistics>Frequencies*, then add these variables to the 'Variable(s)' box. Make sure 'Display frequency tables' is checked, then click 'OK'. You should see the following output:
+
+```{r, echo = F, fig.align= 'center', out.width = '50%'}
+knitr::include_graphics('https://mtruelovehill.github.io/PRM/Labs/images/week7_freqTables.png')
+```
+
+You might also find it helpful to check the mode of the `SE` variables.
+
+**Continuous Variables:** Your continuous variables are `SelfEnhancment` and `AntisocialBehaviour`. Click *Analyze>Descriptive Statistics>Frequencies*, then add these variables to the 'Variable(s)' box. Make sure 'Display frequency tables' is not ticked, then click 'Statistics'. Tick 'Mean', 'Std. Deviation', 'Minimum', and 'Maximum'. Click 'Continue', then 'OK'. You should see the following output:
+
+```{r, echo = F, fig.align= 'center', out.width = '40%'}
+knitr::include_graphics('https://mtruelovehill.github.io/PRM/Labs/images/week7_descStats.png')
+```
+
+Note that the maximum value for `AntisocialBehaviour` is 190, which is not a valid score. This is an error, so you'll need to remove it from your data so that it is not included in further analysis. To do this, find the value in your dataset under 'Data View' and delete it.
+
 </details>
 </div>
 </br>
 
-## Run Correlations
+## Run a Pearson Correlation
 
 As you are testing for an association between two continuous variables, you'll use a correlation to provide statistical support for your hypotheses. 
 
 Recall that $r$ has the following interpretation standards:
 
-| Strength     | Magnitude of $r$ |
-|:------------:|:----------------:|
-| Negligible   | $<$ .1           |
-| Weak         | .1 - .3          |
-| Moderate     | .3 - .6          |
-| Strong       | $>$ .6           |
+| Strength     | Absolute Magnitude of $r$ |
+|:------------:|:-------------------------:|
+| Negligible   | $<$ .1                    |
+| Weak         | .1 - .3                   |
+| Moderate     | .3 - .5                   |
+| Strong       | $>$ .5                    |
 
 
-### Your Tasks
+### Your Task
 
-+ [ ] $\ $ Run a correlation to test your hypotheses and interpret the results with $\alpha$ = .05.
-
-+ [ ] $\ $ Produce a correlation matrix showing the correlations between each of the SE variables: `SE1`, `SE2`, `SE3`, and `SE4`
++ [ ] $\ $ Run a correlation to test your hypotheses and interpret the results with $\alpha$ = .05. Note that you should run the correlation between the total self-enhancement score, `SelfEnhancment` and `AntisocialBehaviour`.
 
 
 ```{r cyrCorr, echo = FALSE}
 quiz(caption = 'Check Your Results',
      question_numeric("What is the Pearson correlation value for the association between AntisocialBehaviour and SelfEnhancement? Please round your answer to two decimal places.",
-              answer(.31, correct = T),
-              message = "Pearson's r for the association between AntisocialBehaviour and SelfEnhancement is .31."),
-     question("Which of the following pairs have the weakest association?",
-              answer("SE1 & SE2"),
-              answer("SE1 & SE3"),
-              answer('SE1 & SE4', correct = T),
-              message = "Pearson's r for the association between SE1 & SE4 is only .30. For the association between SE1 & SE3, it is .49, and for the association between SE1 & SE2, it is .54."))
+              answer(.30, correct = T),
+              message = "Pearson's r for the association between AntisocialBehaviour and SelfEnhancement is .30."))
 ```
 
 <div class="container">
@@ -286,21 +289,13 @@ To run a correlation, you'll need to navigate to *Analyze > Correlate > Bivariat
 <div class="container">
 <details><summary><span style = "font-weight: bold; font-size: 16pt"> Click here for the solution </span></summary>
 
-To correlate `SelfEnhancement` with `AntisocialBehaviour`, navigate to *Analyze > Correlate > Bivariate* and add both of these to the 'Variables' box. You can specify that you'd like to also compute the relevant confidence intervals by selecting 'Confidence interval' box and ticking the 'Estimate confidence intervals of the bivariate correlation parameter' box. Click 'Continue' and then 'OK'. You'll get the following output:
+To correlate `SelfEnhancement` with `AntisocialBehaviour`, navigate to *Analyze > Correlate > Bivariate* and add both of these to the 'Variables' box. You can specify that you'd like to also compute the relevant confidence intervals by selecting 'Confidence interval' box and ticking the 'Estimate confidence intervals of the bivariate correlation parameter' box. Click 'Show only the lower diagonal'; this removes redundant information from the correlation matrix. Click 'Continue' and then 'OK'. You'll get the following output:
 
 ```{r, echo = F, fig.align= 'center', out.width = '50%'}
 knitr::include_graphics('https://mtruelovehill.github.io/PRM/Labs/images/week7_correlationResults.png')
 ```
 
-The top box provides a correlation matrix with the value of $r$ and the p-value, while the bottom box gives the confidence interval associated with the correlation. Here, you can see that $r$ = .3, which equates to a weak to moderate association between `SelfEnhancement` and `AntisocialBehaviour`. The $p$-value (< .001) is less than the $\alpha$ threshold of .05, so this association is significant. The 95% confidence interval indicates that we can be 95% confident that the true association ($r$) between these two variables falls between .17 and .44. 
-
-You can correlate the SE variables in the same way as above. This time, click 'Show only the lower diagonal'. This removes redundant information from the correlation matrix, which is how correlation matrices are typically presented:
-
-```{r, echo = F, fig.align= 'center', out.width = '50%'}
-knitr::include_graphics('https://mtruelovehill.github.io/PRM/Labs/images/week7_correlationMatrix.png')
-```
-
-Here, you can see that all variables are significantly associated with each other, which you would expect given that they are supposed to measure the same construct. 
+The top box provides a correlation matrix with the value of $r$ and the p-value, while the bottom box gives the confidence interval associated with the correlation. Here, you can see that $r$ = .30, which equates to a weak to moderate association between `SelfEnhancement` and `AntisocialBehaviour`. The $p$-value (< .001) is less than the $\alpha$ threshold of .05, so this association is significant. The 95% confidence interval indicates that we can be 95% confident that the true association ($r$) between these two variables falls between .16 and .43. 
 
 
 </details>
@@ -334,7 +329,9 @@ quiz(caption = 'Check Your Results',
 <div class="container">
 <details><summary><span style = "font-weight: bold; font-size: 16pt"> Click here for a hint </span></summary>
 
-Hint here.
+If you are having trouble opening the ggPlot GUI website, first try opening the page in a different window (right click on the link and click 'Open in a new window'). If that doesn't work, try using a different browser. 
+
+If you are still having trouble, please [download this file](https://mtruelovehill.github.io/PRM/Labs/ggplotgui_for_positcloud.R), import it into Posit, and run it. If you're hung up on how to do that, please call one of your tutors over for assistance.
 
 </details>
 </div>
@@ -343,33 +340,16 @@ Hint here.
 <div class="container">
 <details><summary><span style = "font-weight: bold; font-size: 16pt"> Click here for the solution </span></summary>
 
-Navigate [to the ggplot GUI webpage](https://shiny.gmw.rug.nl/ggplotgui/) by clicking the link. Upload the SPSS datafile into the ggplot GUI application by using Data Upload column on the left of the page. First, click the 'Browse' button to find the file on your device, selecting 'SPSS' under 'Type of File', then clicking 'Submit Datafile'.
+Navigate [to the ggplot GUI webpage](https://shiny.gmw.rug.nl/ggplotgui/) by clicking the link. Upload the SPSS datafile into the ggplot GUI application by using Data Upload column on the left of the page. First, click the 'Browse' button to find the file on your device, selecting 'SPSS' under 'Type of File', then clicking 'Submit Datafile'. You'll see a sample of your data pop up on the screen. Once that appears, click the 'ggplot' option (circled).
 
-```{r, echo = F, fig.align= 'center', out.width = '50%'}
+```{r, echo = F, fig.align= 'center', out.width = '75%'}
 knitr::include_graphics('https://mtruelovehill.github.io/PRM/Labs/images/week7_ggplotData.png')
-```
-
-You'll see a sample of the data appear to the right. To generate a plot with these data, click the 'ggplot' option, here:
-
-```{r, echo = F, fig.align='center', out.width='50%'}
-knitr::include_graphics('https://mtruelovehill.github.io/PRM/Labs/images/week6_ggplotTab.png')
 ```
 
 Here, you can create your plot using the options available in the columns on the left and right of the page. 
 
-<span style = "font-weight: bold; font-size: 14pt"> Boxplot </span>
-In the left column, set the type of plot to 'Boxplot', the y-axis to `AntisocialBehaviour` and the x-axis to `SEcategory`. You can leave everything else as the default setting. To make sure the plot is APA style, navigate to the options on the right of the page, click Theme, and select 'classic' from the drop-down box. You should now have an APA-style boxplot that shows the difference in antisocial behaviour between self-enhancement value groups:
-
-```{r, echo = F, fig.align='center', out.width='50%'}
-knitr::include_graphics('https://mtruelovehill.github.io/PRM/Labs/images/week7_ggplotBoxplot.png')
-```
-
 <span style = "font-weight: bold; font-size: 14pt"> Scatterplot </span>
-In the left column, set the type of plot to 'Scatter', the y-axis to `AntisocialBehaviour` and the x-axis to `SEcategory`. Tick the 'Show regression line' box, and make sure the smoothing function is 'lm'.  To make sure the plot is APA style, navigate to the options on the right of the page, click Theme, and select 'classic' from the drop-down box. You should now have an APA-style scatterplot that shows the association between self-enhancement values and antisocial behaviour:
-
-```{r, echo = F, fig.align='center', out.width='50%'}
-knitr::include_graphics('https://mtruelovehill.github.io/PRM/Labs/images/week7_ggplotScatter.png')
-```
+In the left column, set the type of plot to 'Scatter', the y-axis to `AntisocialBehaviour` and the x-axis to `SelfEnhancment`. Tick the 'Show regression line' box, and make sure the smoothing function is 'lm'. To make sure the plot is APA style, navigate to the options on the right of the page, click Theme, and select 'classic' from the drop-down box. 
 
 You can change the axis labels to be more manuscript appropriate (e.g., add spaces between words) by using the 'Text' tab in the right column and ticking 'Change labels axes'.
 
@@ -377,8 +357,14 @@ You can change the axis labels to be more manuscript appropriate (e.g., add spac
 knitr::include_graphics('https://mtruelovehill.github.io/PRM/Labs/images/week7_ggplotTextOptions.png')
 ```
 
+I also like to increase the font size slightly by ticking 'Change font size'. You should now have an APA-style scatterplot that shows the association between self-enhancement values and antisocial behaviour:
+
+```{r, echo = F, fig.align='center', out.width='50%'}
+knitr::include_graphics('https://mtruelovehill.github.io/PRM/Labs/images/week7_ggplotScatter.png')
+```
+
 <span style = "font-weight: bold; font-size: 14pt"> Boxplot </span>
-In the left column, set the type of plot to 'Boxplot'. The y-axis can stay set at `AntisocialBehaviour`, but change the x-axis to `SEcategory`. You can leave everything else as the default setting. You should now have an APA-style boxplot that shows the difference in antisocial behaviour between self-enhancement value groups:
+In the left column, set the type of plot to 'Boxplot'. The y-axis can stay set at `AntisocialBehaviour`, but change the x-axis to `SEcategory`. The previous settings should still be in place, so you can leave them as is. You should now have an APA-style boxplot that shows the difference in antisocial behaviour between self-enhancement value groups:
 
 ```{r, echo = F, fig.align='center', out.width='50%'}
 knitr::include_graphics('https://mtruelovehill.github.io/PRM/Labs/images/week7_ggplotBoxplot.png')
@@ -386,16 +372,18 @@ knitr::include_graphics('https://mtruelovehill.github.io/PRM/Labs/images/week7_g
 
 
 <span style = "font-weight: bold; font-size: 14pt"> Dot & Error Plot </span>
-In the left column, set the type of plot to 'Dot + Error'. The y-axis can stay set at `AntisocialBehaviour` and the the x-axis at `SEcategory`, but add `ParentalPressure` as the Group variable. You can leave everything else as the default setting. 
-
-```{r, echo = F, fig.align='center', out.width='50%'}
-knitr::include_graphics('https://mtruelovehill.github.io/PRM/Labs/images/week7_ggplotDotError.png')
-```
+In the left column, set the type of plot to 'Dot + Error'. The y-axis can stay set at `AntisocialBehaviour` and the the x-axis at `SEcategory`, but add `ParentalPressure` as the Group variable. 
 
 You can change the legend label by using the 'Legend' tab in the right column and ticking 'Change legend'.
 
 ```{r, echo = F, fig.align='center', out.width='50%'}
 knitr::include_graphics('https://mtruelovehill.github.io/PRM/Labs/images/week7_ggplotLegendOptions.png')
+```
+
+You can leave everything else as the default setting. 
+
+```{r, echo = F, fig.align='center', out.width='50%'}
+knitr::include_graphics('https://mtruelovehill.github.io/PRM/Labs/images/week7_ggplotDotError.png')
 ```
 
 </details>
@@ -437,11 +425,11 @@ $r$($df$) = [$r$ value], $p$ = [$p$-value], 95% CI = [lower band, upper band].
 <div class="container">
 <details><summary><span style = "font-weight: bold; font-size: 16pt"> Click here for the solution </span></summary>
 
-In this study, we investigated whether adolescent athletes' self-enhancement values were associated with their antisocial behaviours towards members of the opposing team To do this, we collected data from a sample of 173 adolescents who participate in team sports. One participant was excluded due to an error in the data. Our final sample consisted of 172 adolescent athletes between the ages of 13-18 ($M$ = 15.92, $SD$ = 1.60; 88 Females, 84 Males). 
+In this study, we investigated whether adolescent athletes' self-enhancement values were associated with their antisocial behaviours towards members of the opposing team To do this, we collected data from a sample of 173 adolescents who participate in team sports. One participant was excluded due to an error in the data. Our final sample consisted of 172 adolescent athletes between the ages of 13-19 ($M$ = 15.92, $SD$ = 1.60; 88 Females, 84 Males). 
 
-We ran a Pearson's correlation to test the association between scores on a self-enhancement values scale and the average score on a scale that measured antisocial behaviour. We also used a Pearson correlation to test whether scores on each of the four questions on the self-enhancement scale were associated. $\alpha$ was set at .05 for all analyses.
+We ran a Pearson's correlation to test the association between scores on a self-enhancement values scale and the average score on a scale that measured antisocial behaviour.  $\alpha$ was set at .05 for all analyses.
 
-Participants scored an average of 12.38 on the self-enhancement scale ( $SD$ = 2.75; minimum = 6.28; maximum = 20.79) and had an average antisocial behaviour rating of 2.99 ( $SD$ = 0.87, minimum = 1, maximum = 5). Results from a Pearson's correlation indicated that there was a moderate, positive relationship between the two variables, r(170) = .31, p < .001, 95% CI = [.17, .44], indicating that participants who endorsed stronger self-enhancement values also demonstrated more antisocial behaviours towards members of the opposing team (see Figure 1). 
+Participants scored an average of 12.38 on the self-enhancement scale ( $SD$ = 2.75; minimum = 6.28; maximum = 20.79) and had an average antisocial behaviour rating of 2.99 ( $SD$ = 0.87, minimum = 1, maximum = 5). Results from a Pearson's correlation indicated that there was a moderate, positive relationship between the two variables, $r$(170) = .30, $p$ < .001, 95% CI = [.16, .43], indicating that participants who endorsed stronger self-enhancement values also demonstrated more antisocial behaviours towards members of the opposing team (see Figure 1). 
 
 <b> Figure 1 </b>
 
@@ -451,8 +439,67 @@ Participants scored an average of 12.38 on the self-enhancement scale ( $SD$ = 2
 knitr::include_graphics('https://mtruelovehill.github.io/PRM/Labs/images/week7_scatterFig.png')
 ```
 
+</details>
+</div>
+</br>
 
-Additionally, scores on each of the 4 questions on the self-enhancement scale were moderately positively correlated (see Table 1).
+
+## Bonus Material: Spearman Correlation
+
+There may be times when you want to check the association between ordinal values, such as those from a Likert Scale. Pearson's correlation is not appropriate for this, as it assumes you're testing for a linear association between two continuous variables. When you have ordinal data, you should instead use Spearman's rank correlation, which tests for a monotonic association (as one variable increases or decreases, so does the other, but it doesn't have to be in a linear fashion). Spearman's correlation is denoted by $\rho$ (rho). 
+
+### Your Task
+
++ [ ] $\ $ Run a Spearman's rank correlation test between each of the items on the Self-enhancment scale (`SE1`, `SE1`, `SE3`, & `SE4`).
+
++ [ ] $\ $ Produce an APA-style correlation matrix of your results.
+
+
+```{r cyrSpearman, echo = FALSE}
+quiz(caption = '',
+     question_numeric("What is the value of rho associated with the relationship between SE3 & SE4? Please round your answer to two decimal places.",
+                      answer(.47, correct = T),
+                      message = "Spearman's rho for the association between SE3 & SE4 is .47"),
+     question("Which of the following pairs have the weakest association?",
+              answer("SE1 & SE2"),
+              answer("SE1 & SE3"),
+              answer('SE1 & SE4', correct = T),
+              message = "Spearman's rho for the association between SE1 & SE4 is only .28. For the association between SE1 & SE3, it is .39, and for the association between SE1 & SE2, it is .51."))
+```
+
+<div class="container">
+<details><summary><span style = "font-weight: bold; font-size: 16pt"> Click here for a hint </span></summary>
+You'll find the steps of this to be very similar to the Pearson correlation. Check the 'Correlation Coefficient' options under *Analyze > Correlate > Bivariate*
+
+
+I personally find SPSS tables difficult to customise and produce in APA style. It's okay to use Microsoft Word, Microsoft Excel, or another data processing programme of your choice to create your correlation matrix.
+
+</details>
+</div>
+</br>
+
+
+<div class="container">
+<details><summary><span style = "font-weight: bold; font-size: 16pt"> Click here for the solution </span></summary>
+Navigate to *Analyze > Correlate > Bivariate*. Change the tick mark under 'Correlation Coefficients' from 'Pearson' to 'Spearman'. Click 'Flag significant correlations' and 'Show only the lower triangle', then click 'OK'.
+
+
+```{r, echo = F, fig.align='center', out.width='75%'}
+knitr::include_graphics('https://mtruelovehill.github.io/PRM/Labs/images/week7_SpearmanOptions.png')
+```
+
+You'll get the following output, which you can interpret in the same way as Pearson's $r$:
+
+```{r, echo = F, fig.align='center', out.width='75%'}
+knitr::include_graphics('https://mtruelovehill.github.io/PRM/Labs/images/week7_SpearmanResults.png')
+```
+
+Here, you can see that all variables are significantly associated with each other, which you would expect given that they are supposed to measure the same construct. 
+
+
+You can report the results like this:
+
+We used Spearman correlations to test whether scores on each of the four questions on the self-enhancement scale were associated. Scores on each of the 4 questions on the self-enhancement scale were moderately positively correlated (see Table 1).
 
 
 ```{r, echo = F, fig.align='center', out.width='75%'}
@@ -463,4 +510,3 @@ knitr::include_graphics('https://mtruelovehill.github.io/PRM/Labs/images/week7_c
 </details>
 </div>
 </br>
-
